# vision-pkg

./: CMakeLists.txt  README.md
ChessboardDetector/: CChessboardDetectorApp.cpp  CChessboardDetectorApp.h  CMakeLists.txt  ChessboardDetector_example.moos  main.cpp
StereoOdometry_common/: CBaseStereoOdometryApp.cpp  CBaseStereoOdometryApp.h  README.txt
StereoOdometry_libviso/: CMakeLists.txt  CStereoOdometryApp.cpp  CStereoOdometryApp.h  StereoOdometry_libviso_example.moos  main.cpp
StereoOdometry_libviso/libviso/src/: filter.cpp  filter.h  matrix.cpp  matrix.h  viso.cpp  viso.h  viso_stereo.cpp  viso_stereo.h
